# codex-pet-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
docs/: index.html  release-workflow.yml
resources/pets/tiantian/: pet.json
resources/pets/tigris-whippet/: pet.json
scripts/: build-app.js  build-petpacks.js  build-variant.js  cargo-cache-fingerprint.js  qa-petpack-assets.js  render-download-page.js
src/: cargo-cache-fingerprint-smoke.js  download-page-smoke.js  petpack-qa-smoke.js  renderer-direction-smoke.js  renderer-empty-smoke.js  renderer-import-cache-smoke.js  renderer-life-engine-smoke.mjs  renderer-life-integration-smoke.js  renderer-manager-smoke.js  renderer-panel-close-layout-smoke.js  renderer-petpack-helpers-smoke.mjs  renderer-smoke-harness.js  renderer-store-enhanced-smoke.js  renderer-store-progress-smoke.js  renderer-update-failure-smoke.js  renderer-update-smoke.js  renderer-window-interaction-smoke.js  renderer.css  renderer.html  renderer.js  smoke.js  visual-qa-page-smoke.js  workflow-runtime-smoke.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pet_catalog.rs  petpack.rs  preferences.rs  state.rs  tray.rs  windowing.rs
src/app/: renderer.css  renderer.html
src/app/renderer/: animation.js  bridge.js  dom.js  import-flow.js  index.js  interactions.js  life-engine.js  pet-manager.js  store.js  updates.js  window-layout.js
src/renderer/: bridge.js  constants.js  index.js  petpack.js  version.js
